manifests/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.ialso.cn
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: grafana
            port:
              number: 3000
  - host: prometheus.ialso.cn
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
  - host: alertmanager.ialso.cn
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: alertmanager-main
            port:
              number: 9093
